--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cvent-breathe-easy</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>CVent Turboair Ventilator</title>
+    <link rel="icon" type="image/png" href="lovable-uploads/e85e277d-52d9-46ea-b953-08c01260cd07.png" />
+    <meta name="description" content="C Vent – Turboair Ventilator premium sejak 1997. Solusi ventilasi alami tanpa listrik untuk pabrik, gudang, rumah tinggal, restoran, perkantoran, tempat ibadah, dan gedung olahraga. Bergaransi hingga 10 tahun." />
+    <meta name="author" content="C Vent – Turbin Ventilator" />
 
-    <meta property="og:title" content="cvent-breathe-easy" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="C Vent – Turboair Ventilator Premium Sejak 1997" />
+    <meta property="og:description" content="Solusi ventilasi alami tanpa listrik, hemat energi, dan berkualitas internasional. C Vent telah dipercaya sejak 1997 dengan garansi hingga 10 tahun." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="lovable-uploads/e85e277d-52d9-46ea-b953-08c01260cd07.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@cvent_indonesia" />
+    <meta name="twitter:image" content="lovable-uploads/e85e277d-52d9-46ea-b953-08c01260cd07.png" />
   </head>
 
   <body>
